# html-to-text-comparison

./: Cargo.toml  README.md
src/: main.rs  runner.rs
